--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,38 @@
     margin-right: 70px;
 }
 
+#movie-button-area {
+    padding: 10px 20px 10px 20px;
+    background-color: #5b1606;
+}
+
+.movie-col {
+    padding: 0;
+}
+
+.movie-button-div {
+    width: 100%;
+    height: 100%;
+    padding: 2px;
+}
+
+.movie-button {
+    width: 100%;
+    height: 100%;
+    color: #250d05;
+    font-weight: bold;
+    /* text-shadow: -1px -1px #fff; */
+    background-color: #fccb6f;
+}
+
+.movie-button:hover {
+    background-color: #fc9b4d;
+}
+
+.movie-button-selected {
+    background-color: #be4c1f;
+}
+
 #poster {
     /* width: 450px; */
     margin-left: 50px;
@@ -29,7 +61,6 @@
 }
 
 #image-poster {
-    display: block;
     /* margin-left: auto;
     margin-right: auto; */
     width: 60%;
