--- a/Template/index.html
+++ b/Template/index.html
@@ -2,57 +2,154 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Meng</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>MovieFinder</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Eczar|Indie+Flower" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <script src="script.js"></script>
+    <!-- google fonts link-->
+    <!-- materialze  and  style.css link  -->
+    <link rel="stylesheet" href="assets/animate.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- tab icon  and  search icons -->
+    <link rel="icon" href="assets/images/pop1.png">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
-    <h1> Template</h1>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <p>Search bar?</p>
-            </div>
+        <video autoplay muted loop>
+                <source src="assets/images/hd0911.mov" type="video/mp4">
+            </video>
+            <div id="video_cover"></div>
+        
+    <!-- Find a Movie header -->
+    <div class="hero-image">
+        <div class="hero-text">
+          <p>Project Name</p>
         </div>
+      </div>
+      <!-- <video autoplay muted loop>
+            <source src="assets/images/hd0911.mov" type="video/mp4">
+        </video>
+        <div id="video_cover"></div>
+     -->
+
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-md-4">
-                <p>OMDB</p>
-            </div>
-            <div class="col-md-8">
-                <p> Youtube/Trailer</p>
-            </div>
-        <div class="row">
-            <div class="col-md-12">
-                <p>Listings/google places</p>
-            </div>
-            <div class="row">
-                    <div class="col-md-12">
-                        <p>Favorite's bar? For Firebase?</p>
+                
+            <!-- row to hold the movie poster and movie description-->
+            <div id="omdb" class="col-md-6">
+                <div id="poster" class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="text-center animated fadeInLeft">Movie Overview</h3>
                     </div>
 
+                    <div id="image-poster"></div>
+                    <!-- ***** THIS IS WHERE THE MOVIE POSTER WILL GO *****  -->
+                    <div class="posterinfo">
+                        <p id="description"> </p>
+                        <!-- ***** THIS IS WHERE THE MOVIE DESCRIPTION WILL GO *****  -->
+
+                    </div>
+
+                    <div class="info">
+                        <p class="" id="rating"></p>
+                        <!-- ***** THIS IS WHERE THE MOVIE RATING WILL GO *****  -->
+                        <p class="" id="runtime"></p>
+                        <!-- ***** THIS IS WHERE THE MOVIE RUNTIME WILL GO *****  -->
+                        <p class="" id="releasedate"></p>
+                        <!-- ***** THIS IS WHERE THE MOVIE RELEASE DATE WILL GO *****  -->
+
+                    </div>
+                </div>
+            </div>
+
+            <div id="youtube" class="col-md-6">
+                <div id="trailer" class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="text-center animated fadeInLeft">Trailer</h3>
+                    </div>
+
+                    <span class="trailer"></span>
+                    <!-- ***** THIS IS WHERE THE TRAILER WILL GO *****  -->
+                </div>
+            </div>
+        </div>
+        <!-- closing tag for row holding the movie poster and overview -->
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <!-- row to hold showtime search and table -->
+
+            <div class="col-md-2"></div>
+            <!-- empty div to get row to equal 12 -->
+
+            <div class="col-md-8">
+                <!-- div to hold showtime search and table display -->
+                <div id="movie-time" class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class "text-center">Search For Movies Playing In Theaters</h3>
+                        <p id="missingInput"></p>
+                        <div id="zip-search" class="input-group">
+                            <i class="material-icons">add_location</i>
+                            <input type="number" class="form-control" id="zipCodeField" placeholder="Enter a 5-digit zip code">
+                        </div>
+                        <br>
+                        <div id="pickDate" class="input-group">
+                            <i class="material-icons">date_range</i>
+                            <input type="date" class="form-control" id="dateField" placeholder="Choose a date">
+                        </div>
+                        <br>
+                        <span class="input-group-btn animated fadeInLeft" id="searchButtons">
+                            <button class="btn btn-default" id="showtimeButton" type="button">Go!</button>
+                        </span>
+                        <br>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2"></div>
+            <!-- empty div to get row to equal 12 -->
         </div>
 
-
-
+        <div class="row">
+            <div class="col-md-12">
+                <h4 class="text-center animated fadeInLeft">Movies Currently In Theaters</h4>
+                <!-- == MOVIE LIST == -->
+                <div id="movie-button-area"></div>
+            </div>
         </div>
-    </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <!-- this is for the table that holds the showtimes results  -->
+                <table style="width:100%" id="showtimeTable">
+                    <tr>
+                        <!-- <th>Movie</th>  -->
+                        <th>Movie</th>
+                        <th>Theatres Playing Your Selected Movie</th>
+                        <th>Showtimes</th>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <!-- closing tag for div holding showtime search and table display -->
+
     </div>
 
 
-    <!-- Bootstrap -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-        crossorigin="anonymous"></script>
+
+    <!-- jQuery  and  javascript links -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="assets/javascript.js"></script>
+
+
+    <!-- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
+
+    <!-- moment.js  and  materialize js  links-->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.2.1/moment.min.js"></script>
+    <script type="text/javascript" src="assets/js/materialize.min.js"></script>
 </body>
 
 </html>
