--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,88 @@
 body {
     color:black;
-    background-color: #3BA6EC;
+    font-family: 'Lato', sans-serif;
+    background-color: rgb(53, 173, 253);
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-size: cover;
 }
+hr {
+    background-color:black;
+}
+img{
+    border: 2px solid white;
+    border-radius: 20px 20px;
+}
+iframe {
+    padding: 30px;
+    height: 400px;
+    width: 700px;
+    display: block;
+    margin-left: 60px;
+}
+video {
+    position: absolute;
+    top: 50px; right: 190px;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+    height: 300px; width: 10px;
+    /* opacity: 0.6; */
+    z-index: -1;
+} 
+#video2 {
+    position: absolute;
+    top: 50px; right: 660px;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+    height: 300px; width: 10px;
+    /* opacity: 0.6; */
+    z-index: -1;
+}
+#video3 {
+    position: absolute;
+    top: 50px; left: 750px;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+    height: 300px; width: 10px;
+    /* opacity: 0.6; */
+    z-index: -1;
+}
+
+#video_cover {
+    position: absolute;
+    width: 100%; height: 100%;
+    background-size: cover;
+    background-position: center;
+}
+.hero-image {
+    /* The image used */
+    /* opacity: 0.8; */
+    /* Set a specific height */
+    height: 250px;
+    background-color:rgb(53, 173, 253);
+
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+.hero-text {
+    text-align:center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: rgb(53, 173, 253);
+    text-shadow: 4px 4px black;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 4em;
+    letter-spacing: 7px;
+    word-spacing: 10px;
+    padding-bottom: 25px;
+  
+}
+
 #movie-search {
     width: 883px;
     height: 2px;
@@ -40,15 +121,15 @@ body {
     height: 100%;
     color: black;
     font-weight: bold;
-    /* text-shadow: -1px -1px #fff; */
+    text-shadow: -1px -1px #fff;
 }
 
 .movie-button:hover {
-    background-color: #3BA6EC;
+    background-color: rgb(53, 173, 253);
 }
 
 .movie-button-selected {
-    background-color: #3BA6EC;
+    background-color: rgb(53, 173, 253);
 }
 
 #poster {
@@ -72,10 +153,6 @@ body {
     padding-bottom: 30px;
 }
 
-/* img {
-    height: 360px;
-    width: 290px;
-} */
 
 .posterinfo {
     padding: 12px;
@@ -88,20 +165,6 @@ body {
 
 .body {
     padding: 30px;
-}
-
-body {
-    background-repeat: no-repeat;
-    background-position: 0 0;
-    background-size: cover;
-}
-
-iframe {
-    padding: 30px;
-    height: 400px;
-    width: 700px;
-    display: block;
-    margin-left: 60px;
 }
 
 .column {
@@ -122,14 +185,74 @@ iframe {
 
 #movieInput {
     color: white;
-    /* background-color: whitesmoke; */
     border-color: white;
 }
 #missingInput {
     color: white;
     font-weight: bold;
 }
+#goButton, #showtimeButton, #searchNewMovie {
+    /* background-color: rgb(169, 249, 252); */
+    color: white;
+    height: 70px; 
+    width: 70px;   
+    background-image: url(../images/Movie-Camera-Icon.jpg);
+    background-repeat: no-repeat;
+    text-align: center;
+    font-size: 16px;
+    border: 3px solid black;
+    border-radius: 70px 70px;
+    background-color: white;
+    font-weight: bold;
+    
 
+}
+#showtimeButton {
+    margin-left:120px;
+}
+
+
+#movie-time {
+    position: relative;
+    background-color: rgb(53, 173, 253);
+    border: 6px solid black;
+    border-radius: 20px 20px;
+    left:50px;
+    width:500px;
+}
+.title {
+    text-align: top;
+    transform: translate(-50%, -50%);
+    color: rgb(31, 30, 30);
+    text-shadow: 4px 4px rgb(53, 173, 253);
+    font-family: 'Lato', sans-serif;
+    font-size: 32px;
+    letter-spacing: 7px;
+    word-spacing: 10px;
+    padding-top: 10px;
+}
+#searchMovieT {
+    color:black;
+    font-family: 'Lato', sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+    letter-spacing: 7px;
+    word-spacing: 10px;
+    padding: 20px;
+    
+}
+
+#showtimeTable {
+    background-color:black;
+    color:white;
+}
+
+#movie-headers {
+    text-align: center;
+}
+#findM {
+    font-size: 24px;
+}
 @media screen and (max-width: 640px) {
 
     #movie-search {
@@ -163,77 +286,4 @@ iframe {
         width: 500px;
 
     }
-}
-video {
-    position: absolute;
-    top: -10; left: 10px;
-    transform: translate(-50%, -50%);
-    object-fit: cover;
-    height: 100%; width: 100%;
-    /* opacity: 0.6; */
-    z-index: -1;
-} 
-
-#video_cover {
-    position: absolute;
-    width: 100%; height: 100%;
-    background-size: cover;
-    background-position: center;
-}
-#goButton, #showtimeButton, #searchNewMovie {
-    /* background-color: rgb(169, 249, 252); */
-    color: black;
-    height: 80px; 
-    width: 120px;   
-    background-image: url(../images/movieB.png);
-    background-repeat: no-repeat;
-    text-align: center;
-    font-size: 16px;
-    border: 3px solid black;
-    border-radius: 20px 20px;
-    background-color: white;
-    font-weight: bold;
-    
-
-}
-#showtimeButton {
-    margin-left:120px;
-}
-.hero-image {
-    /* The image used */
-    background-image: url(../images/reels.png);
-    /* opacity: 0.8; */
-    /* Set a specific height */
-    height: 250px;
-    background-color:white;
-
-    /* Position and center the image to scale nicely on all screens */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-}
-.hero-text {
-    text-align: top;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: rgb(31, 30, 30);
-    text-shadow: 4px 4px rgb(151, 240, 243);
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 5em;
-    letter-spacing: 7px;
-    word-spacing: 10px;
-    padding-bottom: 25px;
-  
-}
-img{
-    border: 2px solid white;
-    border-radius: 20px 20px;
-}
-#movie-time {
-    background-color: #3BA6EC;
-    border: 3px solid black;
-    border-radius: 20px 20px;
 }
